[Spotless] Applying Google Code Format for protocol files #14 (#1971)
* Spotless apply on protocol

Signed-off-by: Mitchell Gale <Mitchell.Gale@improving.com>

* added ignorefailures

Signed-off-by: Mitchell Gale <Mitchell.Gale@improving.com>

* Update protocol/src/main/java/org/opensearch/sql/protocol/response/format/RawResponseFormatter.java

Co-authored-by: Yury-Fridlyand <yury.fridlyand@improving.com>
Signed-off-by: Mitchell Gale <Mitchell.gale@improving.com>

* Apply suggestions from code review

Co-authored-by: Guian Gumpac <guian.gumpac@improving.com>
Signed-off-by: Mitchell Gale <Mitchell.gale@improving.com>

---------

Signed-off-by: Mitchell Gale <Mitchell.Gale@improving.com>
Signed-off-by: Mitchell Gale <Mitchell.gale@improving.com>
Co-authored-by: Yury-Fridlyand <yury.fridlyand@improving.com>
Co-authored-by: Guian Gumpac <guian.gumpac@improving.com>